Modified bootrom code and boot address
Modified bootrom code in order to initialize the stack pointer.
Modified the Makefile of the bootrom parametrizing the
architecture of the toolchain, by default bootrom is now compiled
with the riscv32-unknown-elf-gcc compiler.

Changed the default boot address in order to boot to the start
procedure.

# Please enter the commit message for your changes. Lines starting
# with '#' will be ignored, and an empty message aborts the commit.
# On branch customRV32RoCC
# Changes to be committed:
#	modified:   bootrom/Makefile
#	modified:   bootrom/bootrom.S
#	modified:   bootrom/bootrom.img
#	modified:   src/main/scala/rocketchip/RISCVPlatform.scala
#

--- a/bootrom/Makefile
+++ b/bootrom/Makefile
@@ -1,7 +1,8 @@
 bootrom_img = bootrom.img
 
-GCC=riscv64-unknown-elf-gcc
-OBJCOPY=riscv64-unknown-elf-objcopy
+ARCH=riscv32-unknown-elf
+GCC=$(ARCH)-gcc
+OBJCOPY=$(ARCH)-objcopy
 
 all: $(bootrom_img)
 
